# SmartAffair

./: .gitignore  CMakeLists.txt  LICENSE  README.md
SEAL/native/examples/: 10_swt_ckks.cpp  9_swt_bfv_test.cpp  CMakeLists.txt  examples.cpp  examples.h
native/examples/: 1_ckks_example.cpp  CMakeLists.txt  examples.h
native/src/: CMakeLists.txt  header.h  main.cpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  pir_util.cpp  pir_util.hpp
